[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lm-package"
version = "1.2.0"
description = "Package Lumengine extensions (.lmext archives)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Lumengine", email = "contact@lumiverseai.fr" }]
keywords = ["lumengine", "extension", "packaging", "usd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
signing = ["cryptography>=41.0"]

[project.scripts]
lm-package = "lm_package.cli:main"

[project.urls]
Homepage = "https://github.com/Lumengine/lm-package"
Repository = "https://github.com/Lumengine/lm-package"